--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,12 @@
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    
-    <body>
-        <h1>Add a Category</h1>
+
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+Add a Page
+{% endblock %}
+
+{% block body_block %}
+<h1>Add a Page</h1>
         <div>
             <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
                 {% csrf_token %}
@@ -19,5 +21,4 @@
                 <input type="submit" name="submit" value="Add Page" />
             </form>
         </div>
-    </body>
-</html>
+{% endblock %}s
