--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
+{% block title_block %}
+Homepage
+{% endblock %}
+
+{% block body_block %}
         <h1>Rango says...</h1>
         <div>
             hey there partner! <br />
@@ -45,5 +45,4 @@
             <a href="/rango/add_category/">Add a New Category</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt = "Picture of Rango" /> <!--New line -->
         </div>
-    </body>
-</html>
+{% endblock %}
