--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,4 +16,5 @@ About Rango
             <img src="{% static 'images/rango.jpg' %}" alt="picture of Rango" />
             <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
         </div>
-{% endblock %}
+
+{% endblock %}s
