--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 {% load staticfiles %}
+{% load rango_template_tags %}
 <html>
     <head lang="en">
         <meta charset="UTF-8"/>
@@ -13,6 +15,7 @@
     <body>
         <div>
         {% block body_block %}
+            {% get_category_list category %}
         {% endblock %}
         </div>
         <hr />
