--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -45,8 +45,9 @@ Homepage
         </div>
         
         <div>
+            <p>Visits: {{ visits }}</p>
             <a href="/rango/about/">About</a><br />
             <a href="/rango/add_category/">Add a New Category</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt = "Picture of Rango" /> <!--New line -->
+            <img src="{% static 'images/rango.jpg' %}" alt = "Picture of Rango" />
         </div>
 {% endblock %}
